--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #121212;
+    background: linear-gradient(135deg, #121212, #303030);
     color: #FFFFFF;
     margin: 0;
     padding: 20px;
@@ -24,6 +24,7 @@ h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 36px;
     font-weight: 600;
+
     color: #FF4500;
     letter-spacing: 0.5px;
     margin-bottom: 20px; /* Увеличиваем отступ снизу */
@@ -63,7 +64,7 @@ p {
 }
 
 .cell {
-    background-color: #1e1e1e;
+    background: linear-gradient(160deg, #303030, #161616);
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
@@ -73,7 +74,7 @@ p {
 }
 
 .cell:hover {
-    background-color: #2e2e2e;
+    background: linear-gradient(160deg, #313131, #1b1b1b);
     transform: translateY(-5px); /* Эффект поднятия при наведении */
 }
 
@@ -110,12 +111,13 @@ p {
 }
 
 .modal-content {
-    background-color: #1e1e1e;
-    margin: 15% auto;
-    padding: 30px;
-    border: 1px solid #888;
-    width: 80%;
+    background: linear-gradient(120deg, rgba(49, 49, 49, 0.9), rgba(26, 26, 26, 0.7));
+    backdrop-filter: blur(10px);
+    padding: 20px;
     border-radius: 10px;
+    margin: 15% auto;
+    border: 1px solid #000000;
+    width: 80%;
     max-width: 600px;
     word-wrap: break-word;
     font-size: 20px;
@@ -221,4 +223,18 @@ a:hover {
 .modal.open {
     display: block; /* Показываем окно */
     opacity: 1; /* Устанавливаем непрозрачность */
+}
+button {
+    background: linear-gradient(90deg, #FF4500 0%, #FF6347 100%);
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+button:hover {
+    background: linear-gradient(90deg, #FF6347 0%, #FF4500 100%);
+    transform: scale(1.05);
+    box-shadow: 0 4px 15px rgba(255, 69, 0, 0.5);
 }
