--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url('../images/back.jpg');
+    background-image: url('../images/back.webp');
     color: #FFFFFF;
     margin: 0;
     padding: 20px;
